<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android_custom="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="user" type="suxiting.com.sxt.common.bean.LoginInfo"/>
    </data>

    <LinearLayout
        style="@style/MatchMatch.Vertical"
        android:background="@color/white">
        <!--此处是上面的导航来-->
        <RelativeLayout
            android:id="@+id/layout_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_48"
            android:background="@color/black_242b39">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="@dimen/back_width"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:clickable="true"
                android:onClick="back"
                android:scaleType="centerInside"
                android:src="@drawable/back_white" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxEms="15"
                android:singleLine="true"
                android:text="@string/login_title"
                android:textColor="@color/white"
                android:textSize="@dimen/text_sixteen" />

            <TextView
                android:id="@+id/right_text"
                android:layout_width="@dimen/back_width"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:clickable="true"
                android:gravity="center"
                android:onClick="rightIcon"
                android:scaleType="centerInside"
                android:text="注册"
                android:textColor="@color/red_e83204" />
        </RelativeLayout>

        <LinearLayout
            style="@style/MatchWrap.Vertical"
            android:background="@color/white">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_39"
                android:src="@drawable/logo" />


            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="@dimen/margin_56"
                android:background="@color/gray_d7d7d7" />

            <EditText
                style="@style/edit_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_52"
                android:drawableLeft="@drawable/username"
                android:hint="@string/login_user_hintname"
                android:nextFocusForward="@+id/et_login_password"
                android:paddingLeft="@dimen/margin_15"
                android:paddingRight="@dimen/margin_10" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3px"
                android:background="@color/gray_d7d7d7" />

            <EditText
                android:id="@+id/et_login_password"
                style="@style/edit_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_52"
                android:drawableLeft="@drawable/password"
                android:hint="@string/login_user_hintpwd"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/margin_15"
                android:paddingRight="@dimen/margin_10" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3px"
                android:background="@color/gray_d7d7d7" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_52"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_login_imgCode"
                    style="@style/edit_text"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/margin_52"
                    android:layout_weight="2"
                    android:hint="@string/login_img_code"
                    android:maxLength="5"
                    android:paddingLeft="@dimen/margin_44"
                    android:paddingRight="@dimen/margin_10" />

                <suxiting.com.sxt.common.utils.TextImageButton
                    android:id="@+id/login_imgcode"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/margin_48"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/margin_16"
                    android:layout_weight="0.8"
                    android:background="@drawable/btn_image_captcha_selector"
                    android:scaleType="fitXY"
                    android_custom:ibText="获取图形码"
                    android_custom:ibTextColor="@color/white"
                    android:layout_marginRight="@dimen/margin_15"
                    android_custom:ibTextSize="60sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="3px"
                android:background="@color/gray_d7d7d7" />


            <TextView
                android:id="@+id/tv_login_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_19"
                android:text="@string/loginerror"
                android:textColor="@color/red_fe5e5e"
                android:textSize="@dimen/text_fourteen"
                android:visibility="gone" />

        </LinearLayout>


        <Button
            android:id="@+id/btn_login"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_52"
            android:background="@drawable/btn_red"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/text_seventeen" />

        <RelativeLayout
            style="@style/MatchWrap"
            android:layout_marginRight="@dimen/margin_18"
            android:layout_marginTop="@dimen/margin_19">

            <TextView
                android:id="@+id/tv_forget_password"
                style="@style/text_14_black7b7b"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="@dimen/margin_13"
                android:clickable="true"
                android:onClick="goRegister"
                android:text="@string/forget_password" />
        </RelativeLayout>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:visibility="gone" />
    </LinearLayout>

</layout>